--- a/jxhsjxhs.github.io/source/_posts/科学上网之-自己动手丰衣足食.md
+++ b/jxhsjxhs.github.io/source/_posts/科学上网之-自己动手丰衣足食.md
@@ -4,3 +4,64 @@ date: 2019-11-02 14:18:22
 categories: 杂项
 tags: 
 ---
+
+## 自建ss/ssr教程很简单，整个教程分三步：
+
+> 第一步：购买VPS服务器
+>
+> 第二步：一键部署VPS服务器
+> 
+> 第三步：一键加速VPS服务器
+
+
+
+### 第一步:购买服务器
+> 购买一个非大陆的服务器(目前全世界只有朝鲜和其他国家坚持封杀google)
+> 比如搬瓦工 或者阿里云香港 都行
+> 阿里云香港的 阿里云的推荐轻量服务器 贼鸡儿便宜 24块钱一个月...
+> ![阿里云轻量服务器](https://i.loli.net/2019/11/02/u4CcOfZRkwqthHi.png)
+> 好了 这里其他的就不说了 买centos7的服务器就完事了
+
+
+### 第二步:安装ss服务端
+> yum -y install wget
+> wget --no-check-certificate https://raw.githubusercontent.com/teddysun/shadowsocks_install/master/shadowsocksR.sh
+> chmod +x shadowsocksR.sh
+> ./shadowsocksR.sh 2>&1 | tee shadowsocksR.log
+> ![安装](https://i.loli.net/2019/11/02/d9ADGxQ4B7TzVXN.png)
+> 如上图出现管理界面后，输入数字1来安装SSR服务端。
+> ![设置端口](https://i.loli.net/2019/11/02/sg1YX9zLcrtPRhU.png)
+> 根据上图提示，依次输入自己想设置的端口和密码 (密码建议用复杂点的字母组合，端口号为40-65535之间的数字)，回车键用于确认
+> ![加密方式](https://i.loli.net/2019/11/02/6IwaMfy9UsqoGYA.png)
+> 如上图，选择想设置的加密方式，比如10，按回车键确认
+> ![下载相关文件](https://i.loli.net/2019/11/02/VwO49t6hcrgEdsL.png)
+> 提示你下载文件，输入：y
+> ![安装完成](https://i.loli.net/2019/11/02/stL3oluRCArhyeV.png)
+> 耐心等待一会，出现下面的界面即部署完成：
+
+
+
+复制上面的脚本一代码到VPS服务器里，复制代码用鼠标右键的复制，然后在vps里面右键粘贴进去，因为ctrl+c和ctrl+v无效。接着按回车键，脚本会自动安装，以后只需要运行这个快捷命令就可以出现下图的界面进行设置，快捷管理命令为：bash ssr.sh
+
+--- 
+
+### 第三步:安装加速器
+> centos6不支持bbr加速 只能用破解版锐速加速
+> 
+> yum -y install wget
+>
+> wget --no-check-certificate https://github.com/teddysun/across/raw/master/> bbr.sh
+>
+> chmod +x bbr.sh
+> 
+> ./bbr.sh
+
+把上面整个代码复制后粘贴进去，不动的时候按回车，然后耐心等待，最后重启vps服务器即可。
+安装完成以后重启
+服务器重启成功并重新连接服务器后，输入命令lsmod | grep bbr 如果出现tcp_bbr字样表示bbr已安装并启动成功。如图：
+![10.png](https://i.loli.net/2019/11/02/dWR1oeF6Mk4L35x.png)
+
+
+
+
+###  为中华之崛起而翻墙 :-)
