--- a/jxhsjxhs.github.io/source/_posts/科学上网之-自己动手丰衣足食.md
+++ b/jxhsjxhs.github.io/source/_posts/科学上网之-自己动手丰衣足食.md
@@ -37,11 +37,8 @@ tags:
 > ![下载相关文件](https://i.loli.net/2019/11/02/VwO49t6hcrgEdsL.png)
 > 提示你下载文件，输入：y
 > ![安装完成](https://i.loli.net/2019/11/02/stL3oluRCArhyeV.png)
-> 耐心等待一会，出现下面的界面即部署完成：
+> 耐心等待一会，出现上面的界面即部署完成：
 
-
-
-复制上面的脚本一代码到VPS服务器里，复制代码用鼠标右键的复制，然后在vps里面右键粘贴进去，因为ctrl+c和ctrl+v无效。接着按回车键，脚本会自动安装，以后只需要运行这个快捷命令就可以出现下图的界面进行设置，快捷管理命令为：bash ssr.sh
 
 --- 
 
@@ -59,7 +56,7 @@ tags:
 把上面整个代码复制后粘贴进去，不动的时候按回车，然后耐心等待，最后重启vps服务器即可。
 安装完成以后重启
 服务器重启成功并重新连接服务器后，输入命令lsmod | grep bbr 如果出现tcp_bbr字样表示bbr已安装并启动成功。如图：
-![10.png](https://i.loli.net/2019/11/02/dWR1oeF6Mk4L35x.png)
+![bbr](https://i.loli.net/2019/11/02/dWR1oeF6Mk4L35x.png)
 
 
 
