--- a/jxhsjxhs.github.io/source/_posts/2019最后一次出游记录.md
+++ b/jxhsjxhs.github.io/source/_posts/2019最后一次出游记录.md
@@ -97,10 +97,56 @@ tags:
 
 到了酒店已经晚上8点,安置完行李就出去找了个地方吃东西, 可能是中午的饭菜太好吃了,晚上的这一顿饭菜总感觉没啥子印象。印象最深的倒是老板 挨个发烟,然后还给我们本地的芝麻糖吃。 
 
+吃完回来以后,说好的晚上玩玩牌或者狼人杀来着,结果一会儿大家都睡了。估计都累了
 
+---
 
+周日一早,我们一行人(除了李刚夫妇,一大早也不知道在干啥)出去吃早餐。订餐之前老板说这个地方吃早餐可多了...结果一早问他去哪儿吃，他说两公里以外的地方有一个桥 过了桥就有吃的......
+出发前看到一只小黑
+
+![小黑](https://tva1.sinaimg.cn/large/006tNbRwgy1gaet24wh6vj31400u00zj.jpg)
+吃完早饭去了茶山瞧瞧
+
+早上的样子
+![早上](https://tva1.sinaimg.cn/large/006tNbRwgy1gaet6et94wj31400u0aeq.jpg)
+
+吃完早饭出发去了茶山
+![茶山](https://tva1.sinaimg.cn/large/006tNbRwgy1gaet501cglj31hc0omqgf.jpg)
+
+----
+临近中午去了蹦蹦床玩
+吃了最后一顿午饭
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gaetmlf8y1j30u0140whw.jpg)
+出发回上海
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gaetmwyfjij30u01t0thz.jpg)
+圆满结束此次行程。
 
 
 ## 统计此次旅游花销
 
+用途 | 费用 | 费用链接 | 说明 
+---|---|---|---
+租车 | 1585 | https://tva1.sinaimg.cn/large/006tNbRwgy1gadzv3kfawj30u01hcjtp.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwgy1gadzvht35qj30u01hcdi0.jpg  |  无
+提前买的零食水果 | 637.7 | https://tva1.sinaimg.cn/large/006tNbRwly1gacweq4klwj30ku112ad4.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwfa1tqhj30ku112mzr.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwffkh95j30ku112776.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwfkbayuj30ku0t90v0.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwfsxpcmj30ku112jt6.jpg | 买的有点多...下次主意
+出发前买的两箱水和槟榔 |  144 |  https://tva1.sinaimg.cn/large/006tNbRwly1gacwi8yuk1j30hs0i5mxl.jpg | 无
+七座车停车高速加油以及零食 | 420 | https://tva1.sinaimg.cn/large/006tNbRwly1gacwm2zgocj30u00rzdh0.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwmdji4rj30u01t0juy.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwjm7or2j30ac03qt8t.jpg |  无
+五座车停车高速加油以及零食 | 594 |  https://tva1.sinaimg.cn/large/006tNbRwly1gacwob90cxj315k0ne0wd.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwp1igzhj30n80gqthu.jpg | 无
+周五住宿  | 720 |  图随后补上 | 无
+快艇,以及停车  | 740 | https://tva1.sinaimg.cn/large/006tNbRwly1gacwr8zl7rj30gc0agjth.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwly1gacwryed83j30hs0fwq38.jpg | 无
+码头农家乐 | 500 | https://tva1.sinaimg.cn/large/006tNbRwly1gacwt8jmh2j30hs093q30.jpg  | 老板只收微信,冯睿先给的.我转他支付宝
+周六住宿  | 720 |  图随后补上 | 无
+周六晚餐  | 400 | https://tva1.sinaimg.cn/large/006tNbRwly1gacwuwb6b2j30hs0vk0u2.jpg | 袁昭没吃,结算的时候去掉他
+周日早餐  | 145  | https://tva1.sinaimg.cn/large/006tNbRwgy1gadznrxc2xj30hs0ifmxu.jpg  <br> https://tva1.sinaimg.cn/large/006tNbRwgy1gadzox818ej30ku112tah.jpg  | 李刚夫妇没吃,结算去掉
+早上牛奶  | 156 |   https://tva1.sinaimg.cn/large/006tNbRwgy1gadzyc5pwjj30u01t0wkw.jpg  | 订单跟私人订单混合,下次主意分开。
+蹦床娱乐费用 | 731 | https://tva1.sinaimg.cn/large/006tNbRwgy1gadzs30pe7j30hs0gs3z0.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwgy1gadzs9mzn9j30hs0vkab9.jpg | 向莉没去 结算去掉
+周日午饭 | 272 | https://tva1.sinaimg.cn/large/006tNbRwgy1gadzs9mzn9j30hs0vkab9.jpg | 老湿自己付的钱 单独给了 但是都吃了
+回来加油费用  | 665  | https://tva1.sinaimg.cn/large/006tNbRwgy1gadzxnp4njj30u01t0q6l.jpg <br> https://tva1.sinaimg.cn/large/006tNbRwgy1gadzxtkjyfj309k0a3dg5.jpg  | 无
 
+
+总计  8429.7
+向莉 : 596.2 +  13.2 + 36.4   =  645.4 
+李刚夫妇: 596.2 + 66.5 + 36.4  =  699.1
+袁昭: 596.2  + 66.5 + 13.2    =  675.9
+
+其他人
+596.2 +  66.5 + 13.2 + 36.4 = 712.3
