--- a/jxhsjxhs.github.io/source/_posts/搭建我的世界私服.md
+++ b/jxhsjxhs.github.io/source/_posts/搭建我的世界私服.md
@@ -41,3 +41,42 @@ vim  server.properties
 docker restart xxxxx
 
 连接即可。
+
+案例
+Docker搭建我的世界私服并开启Forge插件
+```
+//通过-e TYPE=FORGE在命令行中添加来启用Forge服务器模式
+//默认情况下，容器将运行Forge服务器的RECOMMENDED版本， 但您也可以选择使用运行特定版本。-e FORGEVERSION=10.13.4.1448
+docker run -d -p 25565:25565 \
+-v /Users/litong/Desktop/Docker/Minecraft:/data \
+-e EULA=TRUE \
+-e VERSION=1.12.2 \
+-e TYPE=FORGE \
+--name=mc \
+itzg/minecraft-server
+
+//要从自定义位置（例如您自己的文件存储库）下载Forge安装程序
+docker run -d -p 25565:25565  -v /root/桌面/Minecraft:/data -e EULA=TRUE -e VERSION=1.12.2 -e TYPE=FORGE -e FORGE_INSTALLER_URL=http://HOST/forge-1.11.2-13.20.0.2228-installer.jar --name=mc itzg/minecraft-server
+
+//使用预下载的Forge安装程序，将其放置在附件/data目录中，并使用来指定安装程序文件的名称FORGE_INSTALLER
+docker run -d -p 25565:25565  -v /root/桌面/Minecraft:/data -e EULA=TRUE -e VERSION=1.12.2 -e TYPE=FORGE -e FORGE_INSTALLER=forge-1.12.2-14.23.5.2768-installer.jar --name=mc itzg/minecraft-server
+```
+
+设置管理员
+```
+# 打开ops.json文件，添加管理员
+[
+  {
+    "uuid": "用户1的uuid",
+    "name": "用户1名称",
+    "level": 4,
+    "bypassesPlayerLimit": false
+  },
+  {
+    "uuid": "用户2的uuid",
+    "name": "用户2名称",
+    "level": 4,
+    "bypassesPlayerLimit": false
+  }
+]
+```
