--- a/jxhsjxhs.github.io/source/_posts/装逼编程键盘最佳实践.md
+++ b/jxhsjxhs.github.io/source/_posts/装逼编程键盘最佳实践.md
@@ -7,7 +7,8 @@ tags:
 之前逛淘宝,发现一款贼鸡儿好看的键盘. 心动以后脑子一热就买了
 ![](https://tva1.sinaimg.cn/large/007S8ZIlgy1ge980l3kedj30m80dw3z0.jpg)
 ![](https://tva1.sinaimg.cn/large/007S8ZIlgy1ge9815yk2aj30m80eqdg9.jpg)
-有一说一 确实好看。
+
+U1S1 确实好看。
 
 
 ### 问题来了
