--- a/jxhsjxhs.github.io/source/_posts/9月有感.md
+++ b/jxhsjxhs.github.io/source/_posts/9月有感.md
@@ -5,8 +5,7 @@ categories: 杂项
 tags:
 ---
 好快，2019年都到9月份了。
-其实今年啥都没干，一点东西都没学，但是算是走出了一大步，在武汉买了房子。
-户型比较喜欢，两个大阳台哈哈，还有独立的书房。想着以后能做一个远程工作者
+其实今年啥都没干，一点东西都没学，但是算是走出了一大步.
 
 不幸的是爷爷9月10号去世了
 我听到这个消息，居然内心没啥波澜.......
@@ -14,7 +13,6 @@ tags:
 因为身患绝症，还有一些器官衰竭和腰间盘突出，看到爷爷难受的样子 我倒是觉得是解脱了
 爷爷说 疼的一直不想活了 但是舍不得一家人
 不知道奶奶后续在哪儿住，几个儿子都愿意接过去 但是奶奶说要陪着爷爷
-
 
 生活还要前进 昨天看到祭司摸着小孩子的脸笑了笑 像看到了一个希望的种子。
 接下来的日子里要加油了  好好生活 抓紧学习 把今年的补起来。
