--- a/jxhsjxhs.github.io/source/_posts/一次监控内存的猜想.md
+++ b/jxhsjxhs.github.io/source/_posts/一次监控内存的猜想.md
@@ -2,12 +2,15 @@
 title: 一次监控内存的猜想
 date: 2022-04-10 10:16:14
 tags:
+index_img: https://tva1.sinaimg.cn/large/e6c9d24egy1h15vdux66sj21bg0ryaeo.jpg
+banner_img: https://tva1.sinaimg.cn/large/e6c9d24egy1h15vdux66sj21bg0ryaeo.jpg
 ---
 
 一天一个客户问，他们现在用zabbix做的监控平台看到的内存，跟他们自己用算法算出来的看到的相差非常大，想问问我为啥会这样。
 ![](https://tva1.sinaimg.cn/large/e6c9d24egy1h15uly0m95j20m20co3zt.jpg)
 
 看到图以后第一时间找客户要了一下现在zabbix计算内存的公式,以及现阶段用`free -m`显示情况
+![](https://tva1.sinaimg.cn/large/e6c9d24egy1h15vk88g7kj20vi0e2jsg.jpg)
 ![](https://tva1.sinaimg.cn/large/e6c9d24egy1h15uoj5ikkj215e09mq4s.jpg)
 
 第一时间能看出图中监控数据不一致的情况其实结论很清楚，就是zabbix的算法是1- available/total  客户是用1- free/total。替换成之前的就行。
@@ -23,3 +26,13 @@ tags:
 
 没有swap情况available > free
 ![](https://tva1.sinaimg.cn/large/e6c9d24egy1h15uzeltlzj214s06mgm4.jpg)
+
+`官网下 linux对内存定义的详细描述，free里面是会算部分的swap进去，但是available没算swap。
+
+Estimation of how much memory is available for starting
+              new applications, without swapping. Unlike the data
+              provided by the cache or free fields, this field takes
+              into account page cache and also that not all reclaimable
+              memory slabs will be reclaimed due to items being in use
+              (MemAvailable in /proc/meminfo, available on kernels 3.14,
+              emulated on kernels 2.6.27+, otherwise the same as free)`
