--- a/jxhsjxhs.github.io/source/_posts/冒个泡.md
+++ b/jxhsjxhs.github.io/source/_posts/冒个泡.md
@@ -2,4 +2,60 @@
 title: 冒个泡
 date: 2022-11-02 17:09:42
 tags:
+index_img: https://tva1.sinaimg.cn/large/008vxvgGgy1h7snjvmul8j311w0m4ju7.jpg
+banner_img: https://tva1.sinaimg.cn/large/008vxvgGgy1h7smkudz8yj30u20baglx.jpg
 ---
+最近的大事记
+最近半年最大的事儿是离职。10月的最后一天，我从呆了四年的DaoCloud离职
+讲真 我内心是非常不舍的。虽然我到现在还是很菜，不管是运维、交付、售前、解决方案 都没有达到资深阶段。
+但是很感激DaoCloud给我试错的机会。
+
+我是一个非常喜欢折腾的人，在一个舒适圈待久了我会主动刺破。去寻求新的爽点。
+在DaoCloud的这四年中我的职能转变还挺有意思。
+
+在浦发银行的驻场运维
+项目上的核心运维开发
+转部门到IOG的海尔项目交付
+再从IOG内部转岗，新路带我做售前解决方案
+接下来部门发生大动荡，我没有选择离开，被迫从我喜欢的售前岗位转岗成为交付小组组长
+一直到离职前的岗位是生态小组。
+
+哈哈，四年转了这么多岗位。真的不是我在一个岗位待不下去了才转岗的。基本都是主动的操作。
+其实内心很清楚，我在今年年初就应该离开DaoCloud了。
+
+
+第一个是因为个人重心，以后肯定是在武汉了。
+第二个是我在DaoCloud实在学习不到我感兴趣的东西了。
+但是一直没走的原因，很直白 就是害怕。害怕失去这一份看起来稳定的工作，害怕因为疫情的阶段，出去生存会更加艰难。
+
+正常情况下 我在DaoCloud去不去公司基本都没人说我，只要相关时间点交付东西就行。
+
+这几年的状态下来，导致我个人在DaoCloud的时间非常散漫。(虽然我没有浪费时间，其实在干其他事儿)
+
+这就是我的舒适圈，我深知，我应该突破舒适圈了。
+一直苟着，苟到啥时候呢？
+
+大家都劝我，
+今年行情不好。
+快过年啦，拿完年终奖再走。
+没必要，从新找工作你确定能比现在好的？反而容错率更低。
+在这里大家都知根知底了，干事儿比较好操作。
+。。。。
+
+这些问题其实我都回答不上。
+但是我知道我要走是肯定了的，迟早的事情。
+
+那不如就现在吧，趁我在DaoCloud人设还没崩，趁我暂时还无需为自己的经济问题操心的时候。迈出这一步，甚至可以休息一段时间。
+
+在DaoCloud这段时间我完成了我个人的很多关键节点。
+工作职能的转型，眼界的开拓，在期间结了婚。工资+自己有一些副业，让自己经济有了很大改观。
+
+我自我定义在DaoCloud以及前面的工作经历，是我整个人生工作经历的初级阶段，也是第一个阶段。
+
+我现在需要好好思考一下 我的下一个阶段路怎么走。
+
+我发现身边很多人其实没有想过未来规划的事情，真的很可怕。
+
+我希望能做自己人生的棋手，而不是永远是别人的棋子。
+
+共勉
