个别博客图片地址更新

--- a/jxhsjxhs.github.io/source/_posts/2019最后一次出游记录.md
+++ b/jxhsjxhs.github.io/source/_posts/2019最后一次出游记录.md
@@ -126,21 +126,21 @@ tags:
 
 用途 | 费用 | 费用链接 | 说明 
 ---|---|---|---
-租车 | 1585 | /img/newimg/006tNbRwgy1gadzv3kfawj30u01hcjtp.jpg <br> /img/newimg/006tNbRwgy1gadzvht35qj30u01hcdi0.jpg  |  无
-提前买的零食水果 | 637.7 | /img/newimg/006tNbRwly1gacweq4klwj30ku112ad4.jpg <br> /img/newimg/006tNbRwly1gacwfa1tqhj30ku112mzr.jpg <br> /img/newimg/006tNbRwly1gacwffkh95j30ku112776.jpg <br> /img/newimg/006tNbRwly1gacwfkbayuj30ku0t90v0.jpg <br> /img/newimg/006tNbRwly1gacwfsxpcmj30ku112jt6.jpg | 买的有点多...下次主意
-出发前买的两箱水和槟榔 |  144 |  /img/newimg/006tNbRwly1gacwi8yuk1j30hs0i5mxl.jpg | 无
-七座车停车高速加油以及零食 | 420 | /img/newimg/006tNbRwly1gacwm2zgocj30u00rzdh0.jpg <br> /img/newimg/006tNbRwly1gacwmdji4rj30u01t0juy.jpg <br> /img/newimg/006tNbRwly1gacwjm7or2j30ac03qt8t.jpg |  无
-五座车停车高速加油以及零食 | 594 |  /img/newimg/006tNbRwly1gacwob90cxj315k0ne0wd.jpg <br> /img/newimg/006tNbRwly1gacwp1igzhj30n80gqthu.jpg | 无
+租车 | 1585 | https://www.jxhs.me/img/newimg/006tNbRwgy1gadzv3kfawj30u01hcjtp.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwgy1gadzvht35qj30u01hcdi0.jpg  |  无
+提前买的零食水果 | 637.7 | https://www.jxhs.me/img/newimg/006tNbRwly1gacweq4klwj30ku112ad4.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwfa1tqhj30ku112mzr.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwffkh95j30ku112776.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwfkbayuj30ku0t90v0.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwfsxpcmj30ku112jt6.jpg | 买的有点多...下次主意
+出发前买的两箱水和槟榔 |  144 |  https://www.jxhs.me/img/newimg/006tNbRwly1gacwi8yuk1j30hs0i5mxl.jpg | 无
+七座车停车高速加油以及零食 | 420 | https://www.jxhs.me/img/newimg/006tNbRwly1gacwm2zgocj30u00rzdh0.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwmdji4rj30u01t0juy.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwjm7or2j30ac03qt8t.jpg |  无
+五座车停车高速加油以及零食 | 594 |  https://www.jxhs.me/img/newimg/006tNbRwly1gacwob90cxj315k0ne0wd.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwp1igzhj30n80gqthu.jpg | 无
 周五住宿  | 720 |  图随后补上 | 无
-快艇,以及停车  | 740 | /img/newimg/006tNbRwly1gacwr8zl7rj30gc0agjth.jpg <br> /img/newimg/006tNbRwly1gacwryed83j30hs0fwq38.jpg | 无
-码头农家乐 | 500 | /img/newimg/006tNbRwly1gacwt8jmh2j30hs093q30.jpg  | 老板只收微信,冯睿先给的.我转他支付宝
+快艇,以及停车  | 740 | https://www.jxhs.me/img/newimg/006tNbRwly1gacwr8zl7rj30gc0agjth.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwly1gacwryed83j30hs0fwq38.jpg | 无
+码头农家乐 | 500 | https://www.jxhs.me/img/newimg/006tNbRwly1gacwt8jmh2j30hs093q30.jpg  | 老板只收微信,冯睿先给的.我转他支付宝
 周六住宿  | 720 |  图随后补上 | 无
-周六晚餐  | 400 | /img/newimg/006tNbRwly1gacwuwb6b2j30hs0vk0u2.jpg | 袁昭没吃,结算的时候去掉他
-周日早餐  | 145  | /img/newimg/006tNbRwgy1gadznrxc2xj30hs0ifmxu.jpg  <br> /img/newimg/006tNbRwgy1gadzox818ej30ku112tah.jpg  | 李刚夫妇没吃,结算去掉
-早上牛奶  | 156 |   /img/newimg/006tNbRwgy1gadzyc5pwjj30u01t0wkw.jpg  | 订单跟私人订单混合,下次主意分开。
-蹦床娱乐费用 | 731 | /img/newimg/006tNbRwgy1gadzs30pe7j30hs0gs3z0.jpg <br> /img/newimg/006tNbRwgy1gadzs9mzn9j30hs0vkab9.jpg | 向莉没去 结算去掉
-周日午饭 | 272 | /img/newimg/006tNbRwgy1gadzs9mzn9j30hs0vkab9.jpg | 老湿自己付的钱 单独给了 但是都吃了
-回来加油费用  | 665  | /img/newimg/006tNbRwgy1gadzxnp4njj30u01t0q6l.jpg <br> /img/newimg/006tNbRwgy1gadzxtkjyfj309k0a3dg5.jpg  | 无
+周六晚餐  | 400 | https://www.jxhs.me/img/newimg/006tNbRwly1gacwuwb6b2j30hs0vk0u2.jpg | 袁昭没吃,结算的时候去掉他
+周日早餐  | 145  | https://www.jxhs.me/img/newimg/006tNbRwgy1gadznrxc2xj30hs0ifmxu.jpg  <br> https://www.jxhs.me/img/newimg/006tNbRwgy1gadzox818ej30ku112tah.jpg  | 李刚夫妇没吃,结算去掉
+早上牛奶  | 156 |   https://www.jxhs.me/img/newimg/006tNbRwgy1gadzyc5pwjj30u01t0wkw.jpg  | 订单跟私人订单混合,下次主意分开。
+蹦床娱乐费用 | 731 | https://www.jxhs.me/img/newimg/006tNbRwgy1gadzs30pe7j30hs0gs3z0.jpg | 向莉没去 结算去掉
+周日午饭 | 272 | https://www.jxhs.me/img/newimg/006tNbRwgy1gadzs9mzn9j30hs0vkab9.jpg | 老湿自己付的钱 单独给了 但是都吃了
+回来加油费用  | 665  | https://www.jxhs.me/img/newimg/006tNbRwgy1gadzxnp4njj30u01t0q6l.jpg <br> https://www.jxhs.me/img/newimg/006tNbRwgy1gadzxtkjyfj309k0a3dg5.jpg  | 无
 
 
 总计  8429.7
